--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,6 @@
     "js": "index.js",
     "css": "style.css",
     "author": "You",
-    "version": "1.1.0",
-    "auto_update": false
+    "version": "1.1.1",
+    "auto_update": true
 }
